[project]
name = "over-under-project"
version = "0.1.0"
description = ""
authors = [
    {name = "splitflappin",email = "splitflappin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "cookiecutter (>=2.6.0,<3.0.0)",
    "cookiecutter-data-science (>=2.3.0,<3.0.0)"
]
